tests/fixtures/invalid/pow_none_bool.py
# Cannot call pow() with None, Bool
x = pow(None, True)
